fix content clipping

--- a/project/src/App.css
+++ b/project/src/App.css
@@ -1,1 +1,5 @@
 @import "tailwindcss";
+
+#main {
+    background-color: #FD2C2A;
+}
